--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node Aufgabe_8/servertest.js"
+    "start": "node Aufgabe_9/servertest.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,8 @@
     "url": "https://github.com/sailerco/GIS_MIB2/issues"
   },
   "homepage": "https://github.com/sailerco/GIS_MIB2#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@types/node": "^14.0.13"
   }
 }
