--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node Aufgabe_9/servertest.js"
+    "start": "node Aufgabe_11/server.js remote"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,10 @@
     "url": "https://github.com/sailerco/GIS_MIB2/issues"
   },
   "homepage": "https://github.com/sailerco/GIS_MIB2#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/mongodb": "^3.5.25",
+    "mongodb": "^3.5.9"
+  },
   "devDependencies": {
     "@types/node": "^14.0.13"
   }
