--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ node_modules/@types/node/ts3.5/wasi.d.ts
 node_modules/@types/node/ts3.7/assert.d.ts
 node_modules/@types/node/ts3.7/base.d.ts
 node_modules/@types/node/ts3.7/index.d.ts
+node_modules/
+
