--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node Aufgabe_11/server.js remote"
+    "start": "node IceCreamLand/server.js remote"
   },
   "repository": {
     "type": "git",
